Working on gradle versions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dart.flutterSdkPath": "/Users/keckadmin/apps/flutter/bin"
+  "dart.flutterSdkPath": "/Users/keckadmin/apps/flutter/bin",
+  "java.configuration.updateBuildConfiguration": "automatic"
 }
